applications/java-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-backend
  namespace: challenge
spec:
  selector:
    matchLabels:
      app: java-backend
      project: java-backend
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: java-backend
        project: java-backend
    spec:
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config  # Name of the configMap
            items:
              - key: nginx.conf  # Name of the item we had used inside our ConfigMap (under data:)
                path: nginx.conf
      containers:
        - name: java-backend
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthcheck
              port: 80
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthcheck
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
            requests:
              cpu: 50m
              memory: 150Mi
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
