applications/java-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-backend
  namespace: challenge
spec:
  ports:
  - protocol: TCP
    port: 80
    name: http
    targetPort: 80
  selector:
    app: java-backend
    project: java-backend
