applications/java-backend/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-backend
  namespace: challenge
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: java-backend.challenge.com.br
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: java-backend
            port:
              number: 80
  tls:
    - hosts:
        - java-backend.challenge.com.br
      secretName: ingress-nginx-admission
